# Navigation-With-Online-Alignment

./: README.md  kill.sh  kill_all.sh  make.sh  record_loop.sh  rqt.sh  run.sh
auv_model/: CMakeLists.txt  package.xml  urdf.rviz  urdf_bak_20201230.rviz  urdf_cartographer.rviz  urdf_stereo.rviz
auv_model/config/: joint_names_auv_model.yaml
auv_model/launch/: display.launch  display_cartographer.launch  gazebo.launch
auv_model/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link_altitude.STL  link_dvl.STL  link_sonar.STL
auv_model/urdf/: auv_model.csv  auv_model.urdf  usbl_model.urdf
auv_nav_msg/: CMakeLists.txt  package.xml
auv_nav_msg/msg/: DVL.msg  DVLAllInfo.msg  MissionControlData.msg  RECVIM.msg  State.msg  USBLANGLES.msg  USBLLONG.msg
ukf_localization/: CMakeLists.txt  ceres.md  package.xml
ukf_localization/config/: config-delete.yaml  config_large_process_noise.yaml  config_ukf.yaml
ukf_localization/data_gen/: motion.cpp  motion.h  param.h  pub_node.cpp
ukf_localization/data_gen/config/: data_param.yaml  data_param2.yaml  data_param3.yaml  data_param_delete.yaml
ukf_localization/delete/: data_gen.cpp  data_pub.cpp  motion_discrete.cpp  param.cpp
ukf_localization/gps/: gps_fix.cpp  traj_gps.cpp
ukf_localization/include/: initial_usbl.h  localization.h  localization_ros.h  types.h  ukf.h  ukf_helpers.h  utils.h
ukf_localization/launch/: bag_localization.launch  sim_localization.launch
ukf_localization/src/: initial_usbl.cpp  localization.cpp  localization_node.cpp  localization_ros.cpp  utils.cpp
ukf_localization/usbl/: common.h  readme.md  usbl.rviz  usbl_client_select.cpp  usbl_process.h
ukf_localization/visualization/: gps.rviz  localization.rviz  odom.rviz  traj_pub.cpp
ukf_localization/visualization/urdf/: beacon.urdf
